fix overflow

--- a/style.css
+++ b/style.css
@@ -133,7 +133,8 @@ background-repeat: no-repeat;
   background-repeat: no-repeat;
       position: sticky;
       background-attachment: fixed;
-     
+     max-width: 100%;
+     overflow-x: hidden;
     }
     .dice-roll{
       padding: 15px;
